// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Encharge's aliasUser destination action: all fields 1`] = `
Object {
  "messageId": "$NytfaD73IuN43lZ",
  "previousUserId": "$NytfaD73IuN43lZ",
  "timestamp": "2111-09-17T05:15:04.005Z",
  "type": "alias",
  "userId": "$NytfaD73IuN43lZ",
}
`;

exports[`Testing snapshot for Encharge's aliasUser destination action: required fields 1`] = `
Object {
  "previousUserId": "$NytfaD73IuN43lZ",
  "type": "alias",
  "userId": "$NytfaD73IuN43lZ",
}
`;
